--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
           <div class="custom_select">
             <select>
-              <option value="male">@hotmail,com</option>
+              <option value="male">@hotmail.com</option>
               <option value="female">@yahoo.com</option>
             </select>
           </div>
