--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
           <div class="custom_select">
             <select>
-              <option value="male">@hotmail.com</option>
-              <option value="female">@yahoo.com</option>
+              <option value="hotmail">@hotmail.com</option>
+              <option value="hotmail">@yahoo.com</option>
             </select>
           </div>
         </div>
